y.output
State 124 conflicts: 1 shift/reduce
State 130 conflicts: 10 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: MAIN B

    2 $@1: %empty

    3 B: INIBLO $@1 Dvl Dss Ses ENDBLO

    4 Dvl: INIVAR Vl ENDVAR
    5    | %empty

    6 Vl: Vl Cdv
    7   | Cdv

    8 Cdv: TYPEVAR Lv SEMICOLON
    9    | LIST TYPEVAR Lv SEMICOLON

   10 Lv: Lv COMMA ID
   11   | ID
   12   | error

   13 Dss: Dss Ds
   14    | %empty

   15 $@2: %empty

   16 Ds: Cs $@2 B

   17 Cs: Dc ID INIPA Pa ENDPA
   18   | Dc ID INIPA ENDPA
   19   | error

   20 Dc: LIST TYPEVAR
   21   | TYPEVAR

   22 Pa: Pa COMMA Dc ID
   23   | Dc ID

   24 Ses: Ses Se
   25    | Se

   26 Se: B
   27   | ID ASIGN Exp SEMICOLON
   28   | IF INIPA Exp ENDPA Se
   29   | IF INIPA Exp ENDPA Se ELSE Se
   30   | WHILE INIPA Exp ENDPA Se
   31   | FOR ID ASIGN Exp ITEFOR Exp DO Se
   32   | READ Lvread SEMICOLON
   33   | PRINT Lec SEMICOLON
   34   | RETURN Exp SEMICOLON
   35   | Exp LISTOP1
   36   | LISTOP2 Exp

   37 Lvread: WORD COMMA Lv
   38       | Lv

   39 Exp: INIPA Exp ENDPA
   40    | UNARI Exp
   41    | ADDITION Exp
   42    | Exp ADDITION Exp
   43    | Exp ATSIGN Exp
   44    | Exp MINMIN Exp
   45    | Exp COMPAR Exp
   46    | Exp EQUALS Exp
   47    | Exp ORLOG Exp
   48    | Exp ANDLOG Exp
   49    | Exp EXOR Exp
   50    | Exp MULTI Exp
   51    | Exp CONCATENATE Exp
   52    | Exp PLUSPLUS Exp ATSIGN Exp
   53    | ID INIPA Lec ENDPA
   54    | ID
   55    | CONSTANT
   56    | INISQR lc ENDSQR
   57    | error

   58 lc: lc COMMA CONSTANT
   59   | CONSTANT

   60 Lec: Lec COMMA Exp
   61    | Lec COMMA WORD
   62    | Exp
   63    | WORD
   64    | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 12 19 57
UNARI (258) 40
ADDITION (259) 41 42
LISTOP2 (260) 36
MINMIN (261) 44
PLUSPLUS (262) 52
ATSIGN (263) 43 52
MAIN (264) 1
INIBLO (265) 3
ENDBLO (266) 3
INIVAR (267) 4
ENDVAR (268) 4
TYPEVAR (269) 8 9 20 21
SEMICOLON (270) 8 9 27 32 33 34
COMMA (271) 10 22 37 58 60 61
ID (272) 10 11 17 18 22 23 27 31 53 54
INIPA (273) 17 18 28 29 30 39 53
ENDPA (274) 17 18 28 29 30 39 53
LIST (275) 9 20
IF (276) 28 29
ELSE (277) 29
FOR (278) 31
WHILE (279) 30
ASIGN (280) 27 31
ITEFOR (281) 31
DO (282) 31
READ (283) 32
PRINT (284) 33
RETURN (285) 34
CONSTANT (286) 55 58 59
WORD (287) 37 61 63
INISQR (288) 56
ENDSQR (289) 56
CONCATENATE (290) 51
ORLOG (291) 47
ANDLOG (292) 48
EXOR (293) 49
EQUALS (294) 46
COMPAR (295) 45
MULTI (296) 50
LISTOP1 (297) 35


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
S (44)
    on left: 1, on right: 0
B (45)
    on left: 3, on right: 1 16 26
$@1 (46)
    on left: 2, on right: 3
Dvl (47)
    on left: 4 5, on right: 3
Vl (48)
    on left: 6 7, on right: 4 6
Cdv (49)
    on left: 8 9, on right: 6 7
Lv (50)
    on left: 10 11 12, on right: 8 9 10 37 38
Dss (51)
    on left: 13 14, on right: 3 13
Ds (52)
    on left: 16, on right: 13
$@2 (53)
    on left: 15, on right: 16
Cs (54)
    on left: 17 18 19, on right: 16
Dc (55)
    on left: 20 21, on right: 17 18 22 23
Pa (56)
    on left: 22 23, on right: 17 22
Ses (57)
    on left: 24 25, on right: 3 24
Se (58)
    on left: 26 27 28 29 30 31 32 33 34 35 36, on right: 24 25 28 29
    30 31
Lvread (59)
    on left: 37 38, on right: 32
Exp (60)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57, on right: 27 28 29 30 31 34 35 36 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 60 62
lc (61)
    on left: 58 59, on right: 56 58
Lec (62)
    on left: 60 61 62 63 64, on right: 33 53 60 61


State 0

    0 $accept: . S $end

    MAIN  shift, and go to state 1

    S  go to state 2


State 1

    1 S: MAIN . B

    INIBLO  shift, and go to state 3

    B  go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    3 B: INIBLO . $@1 Dvl Dss Ses ENDBLO

    $default  reduce using rule 2 ($@1)

    $@1  go to state 6


State 4

    1 S: MAIN B .

    $default  reduce using rule 1 (S)


State 5

    0 $accept: S $end .

    $default  accept


State 6

    3 B: INIBLO $@1 . Dvl Dss Ses ENDBLO

    INIVAR  shift, and go to state 7

    $default  reduce using rule 5 (Dvl)

    Dvl  go to state 8


State 7

    4 Dvl: INIVAR . Vl ENDVAR

    TYPEVAR  shift, and go to state 9
    LIST     shift, and go to state 10

    Vl   go to state 11
    Cdv  go to state 12


State 8

    3 B: INIBLO $@1 Dvl . Dss Ses ENDBLO

    $default  reduce using rule 14 (Dss)

    Dss  go to state 13


State 9

    8 Cdv: TYPEVAR . Lv SEMICOLON

    error  shift, and go to state 14
    ID     shift, and go to state 15

    Lv  go to state 16


State 10

    9 Cdv: LIST . TYPEVAR Lv SEMICOLON

    TYPEVAR  shift, and go to state 17


State 11

    4 Dvl: INIVAR Vl . ENDVAR
    6 Vl: Vl . Cdv

    ENDVAR   shift, and go to state 18
    TYPEVAR  shift, and go to state 9
    LIST     shift, and go to state 10

    Cdv  go to state 19


State 12

    7 Vl: Cdv .

    $default  reduce using rule 7 (Vl)


State 13

    3 B: INIBLO $@1 Dvl Dss . Ses ENDBLO
   13 Dss: Dss . Ds

    error     shift, and go to state 20
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    LISTOP2   shift, and go to state 23
    INIBLO    shift, and go to state 3
    TYPEVAR   shift, and go to state 24
    ID        shift, and go to state 25
    INIPA     shift, and go to state 26
    LIST      shift, and go to state 27
    IF        shift, and go to state 28
    FOR       shift, and go to state 29
    WHILE     shift, and go to state 30
    READ      shift, and go to state 31
    PRINT     shift, and go to state 32
    RETURN    shift, and go to state 33
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    B    go to state 36
    Ds   go to state 37
    Cs   go to state 38
    Dc   go to state 39
    Ses  go to state 40
    Se   go to state 41
    Exp  go to state 42


State 14

   12 Lv: error .

    $default  reduce using rule 12 (Lv)


State 15

   11 Lv: ID .

    $default  reduce using rule 11 (Lv)


State 16

    8 Cdv: TYPEVAR Lv . SEMICOLON
   10 Lv: Lv . COMMA ID

    SEMICOLON  shift, and go to state 43
    COMMA      shift, and go to state 44


State 17

    9 Cdv: LIST TYPEVAR . Lv SEMICOLON

    error  shift, and go to state 14
    ID     shift, and go to state 15

    Lv  go to state 45


State 18

    4 Dvl: INIVAR Vl ENDVAR .

    $default  reduce using rule 4 (Dvl)


State 19

    6 Vl: Vl Cdv .

    $default  reduce using rule 6 (Vl)


State 20

   19 Cs: error .
   57 Exp: error .

    INIBLO    reduce using rule 19 (Cs)
    $default  reduce using rule 57 (Exp)


State 21

   40 Exp: UNARI . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 48


State 22

   41 Exp: ADDITION . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 49


State 23

   36 Se: LISTOP2 . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 50


State 24

   21 Dc: TYPEVAR .

    $default  reduce using rule 21 (Dc)


State 25

   27 Se: ID . ASIGN Exp SEMICOLON
   53 Exp: ID . INIPA Lec ENDPA
   54    | ID .

    INIPA  shift, and go to state 51
    ASIGN  shift, and go to state 52

    $default  reduce using rule 54 (Exp)


State 26

   39 Exp: INIPA . Exp ENDPA

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 53


State 27

   20 Dc: LIST . TYPEVAR

    TYPEVAR  shift, and go to state 54


State 28

   28 Se: IF . INIPA Exp ENDPA Se
   29   | IF . INIPA Exp ENDPA Se ELSE Se

    INIPA  shift, and go to state 55


State 29

   31 Se: FOR . ID ASIGN Exp ITEFOR Exp DO Se

    ID  shift, and go to state 56


State 30

   30 Se: WHILE . INIPA Exp ENDPA Se

    INIPA  shift, and go to state 57


State 31

   32 Se: READ . Lvread SEMICOLON

    error  shift, and go to state 14
    ID     shift, and go to state 15
    WORD   shift, and go to state 58

    Lv      go to state 59
    Lvread  go to state 60


State 32

   33 Se: PRINT . Lec SEMICOLON

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    WORD      shift, and go to state 61
    INISQR    shift, and go to state 35

    SEMICOLON  reduce using rule 64 (Lec)
    COMMA      reduce using rule 64 (Lec)

    Exp  go to state 62
    Lec  go to state 63


State 33

   34 Se: RETURN . Exp SEMICOLON

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 64


State 34

   55 Exp: CONSTANT .

    $default  reduce using rule 55 (Exp)


State 35

   56 Exp: INISQR . lc ENDSQR

    CONSTANT  shift, and go to state 65

    lc  go to state 66


State 36

   26 Se: B .

    $default  reduce using rule 26 (Se)


State 37

   13 Dss: Dss Ds .

    $default  reduce using rule 13 (Dss)


State 38

   16 Ds: Cs . $@2 B

    $default  reduce using rule 15 ($@2)

    $@2  go to state 67


State 39

   17 Cs: Dc . ID INIPA Pa ENDPA
   18   | Dc . ID INIPA ENDPA

    ID  shift, and go to state 68


State 40

    3 B: INIBLO $@1 Dvl Dss Ses . ENDBLO
   24 Ses: Ses . Se

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    LISTOP2   shift, and go to state 23
    INIBLO    shift, and go to state 3
    ENDBLO    shift, and go to state 69
    ID        shift, and go to state 25
    INIPA     shift, and go to state 26
    IF        shift, and go to state 28
    FOR       shift, and go to state 29
    WHILE     shift, and go to state 30
    READ      shift, and go to state 31
    PRINT     shift, and go to state 32
    RETURN    shift, and go to state 33
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    B    go to state 36
    Se   go to state 70
    Exp  go to state 42


State 41

   25 Ses: Se .

    $default  reduce using rule 25 (Ses)


State 42

   35 Se: Exp . LISTOP1
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81
    LISTOP1      shift, and go to state 82


State 43

    8 Cdv: TYPEVAR Lv SEMICOLON .

    $default  reduce using rule 8 (Cdv)


State 44

   10 Lv: Lv COMMA . ID

    ID  shift, and go to state 83


State 45

    9 Cdv: LIST TYPEVAR Lv . SEMICOLON
   10 Lv: Lv . COMMA ID

    SEMICOLON  shift, and go to state 84
    COMMA      shift, and go to state 44


State 46

   57 Exp: error .

    $default  reduce using rule 57 (Exp)


State 47

   53 Exp: ID . INIPA Lec ENDPA
   54    | ID .

    INIPA  shift, and go to state 51

    $default  reduce using rule 54 (Exp)


State 48

   40 Exp: UNARI Exp .
   42    | Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ATSIGN  shift, and go to state 74

    $default  reduce using rule 40 (Exp)


State 49

   41 Exp: ADDITION Exp .
   42    | Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ATSIGN  shift, and go to state 74

    $default  reduce using rule 41 (Exp)


State 50

   36 Se: LISTOP2 Exp .
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81

    $default  reduce using rule 36 (Se)


State 51

   53 Exp: ID INIPA . Lec ENDPA

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    WORD      shift, and go to state 61
    INISQR    shift, and go to state 35

    COMMA  reduce using rule 64 (Lec)
    ENDPA  reduce using rule 64 (Lec)

    Exp  go to state 62
    Lec  go to state 85


State 52

   27 Se: ID ASIGN . Exp SEMICOLON

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 86


State 53

   39 Exp: INIPA Exp . ENDPA
   42    | Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    ENDPA        shift, and go to state 87
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81


State 54

   20 Dc: LIST TYPEVAR .

    $default  reduce using rule 20 (Dc)


State 55

   28 Se: IF INIPA . Exp ENDPA Se
   29   | IF INIPA . Exp ENDPA Se ELSE Se

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 88


State 56

   31 Se: FOR ID . ASIGN Exp ITEFOR Exp DO Se

    ASIGN  shift, and go to state 89


State 57

   30 Se: WHILE INIPA . Exp ENDPA Se

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 90


State 58

   37 Lvread: WORD . COMMA Lv

    COMMA  shift, and go to state 91


State 59

   10 Lv: Lv . COMMA ID
   38 Lvread: Lv .

    COMMA  shift, and go to state 44

    $default  reduce using rule 38 (Lvread)


State 60

   32 Se: READ Lvread . SEMICOLON

    SEMICOLON  shift, and go to state 92


State 61

   63 Lec: WORD .

    $default  reduce using rule 63 (Lec)


State 62

   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp
   62 Lec: Exp .

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81

    $default  reduce using rule 62 (Lec)


State 63

   33 Se: PRINT Lec . SEMICOLON
   60 Lec: Lec . COMMA Exp
   61    | Lec . COMMA WORD

    SEMICOLON  shift, and go to state 93
    COMMA      shift, and go to state 94


State 64

   34 Se: RETURN Exp . SEMICOLON
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    SEMICOLON    shift, and go to state 95
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81


State 65

   59 lc: CONSTANT .

    $default  reduce using rule 59 (lc)


State 66

   56 Exp: INISQR lc . ENDSQR
   58 lc: lc . COMMA CONSTANT

    COMMA   shift, and go to state 96
    ENDSQR  shift, and go to state 97


State 67

   16 Ds: Cs $@2 . B

    INIBLO  shift, and go to state 3

    B  go to state 98


State 68

   17 Cs: Dc ID . INIPA Pa ENDPA
   18   | Dc ID . INIPA ENDPA

    INIPA  shift, and go to state 99


State 69

    3 B: INIBLO $@1 Dvl Dss Ses ENDBLO .

    $default  reduce using rule 3 (B)


State 70

   24 Ses: Ses Se .

    $default  reduce using rule 24 (Ses)


State 71

   42 Exp: Exp ADDITION . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 100


State 72

   44 Exp: Exp MINMIN . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 101


State 73

   52 Exp: Exp PLUSPLUS . Exp ATSIGN Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 102


State 74

   43 Exp: Exp ATSIGN . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 103


State 75

   51 Exp: Exp CONCATENATE . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 104


State 76

   47 Exp: Exp ORLOG . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 105


State 77

   48 Exp: Exp ANDLOG . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 106


State 78

   49 Exp: Exp EXOR . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 107


State 79

   46 Exp: Exp EQUALS . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 108


State 80

   45 Exp: Exp COMPAR . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 109


State 81

   50 Exp: Exp MULTI . Exp

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 110


State 82

   35 Se: Exp LISTOP1 .

    $default  reduce using rule 35 (Se)


State 83

   10 Lv: Lv COMMA ID .

    $default  reduce using rule 10 (Lv)


State 84

    9 Cdv: LIST TYPEVAR Lv SEMICOLON .

    $default  reduce using rule 9 (Cdv)


State 85

   53 Exp: ID INIPA Lec . ENDPA
   60 Lec: Lec . COMMA Exp
   61    | Lec . COMMA WORD

    COMMA  shift, and go to state 94
    ENDPA  shift, and go to state 111


State 86

   27 Se: ID ASIGN Exp . SEMICOLON
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    SEMICOLON    shift, and go to state 112
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81


State 87

   39 Exp: INIPA Exp ENDPA .

    $default  reduce using rule 39 (Exp)


State 88

   28 Se: IF INIPA Exp . ENDPA Se
   29   | IF INIPA Exp . ENDPA Se ELSE Se
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    ENDPA        shift, and go to state 113
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81


State 89

   31 Se: FOR ID ASIGN . Exp ITEFOR Exp DO Se

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    INISQR    shift, and go to state 35

    Exp  go to state 114


State 90

   30 Se: WHILE INIPA Exp . ENDPA Se
   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    ADDITION     shift, and go to state 71
    MINMIN       shift, and go to state 72
    PLUSPLUS     shift, and go to state 73
    ATSIGN       shift, and go to state 74
    ENDPA        shift, and go to state 115
    CONCATENATE  shift, and go to state 75
    ORLOG        shift, and go to state 76
    ANDLOG       shift, and go to state 77
    EXOR         shift, and go to state 78
    EQUALS       shift, and go to state 79
    COMPAR       shift, and go to state 80
    MULTI        shift, and go to state 81


State 91

   37 Lvread: WORD COMMA . Lv

    error  shift, and go to state 14
    ID     shift, and go to state 15

    Lv  go to state 116


State 92

   32 Se: READ Lvread SEMICOLON .

    $default  reduce using rule 32 (Se)


State 93

   33 Se: PRINT Lec SEMICOLON .

    $default  reduce using rule 33 (Se)


State 94

   60 Lec: Lec COMMA . Exp
   61    | Lec COMMA . WORD

    error     shift, and go to state 46
    UNARI     shift, and go to state 21
    ADDITION  shift, and go to state 22
    ID        shift, and go to state 47
    INIPA     shift, and go to state 26
    CONSTANT  shift, and go to state 34
    WORD      shift, and go to state 117
    INISQR    shift, and go to state 35

    Exp  go to state 118


State 95

   34 Se: RETURN Exp SEMICOLON .

    $default  reduce using rule 34 (Se)


State 96

   58 lc: lc COMMA . CONSTANT

    CONSTANT  shift, and go to state 119


State 97

   56 Exp: INISQR lc ENDSQR .

    $default  reduce using rule 56 (Exp)


State 98

   16 Ds: Cs $@2 B .

    $default  reduce using rule 16 (Ds)


State 99

   17 Cs: Dc ID INIPA . Pa ENDPA
   18   | Dc ID INIPA . ENDPA

    TYPEVAR  shift, and go to state 24
    ENDPA    shift, and go to state 120
    LIST     shift, and go to state 27

    Dc  go to state 121
    Pa  go to state 122


State 100

   42 Exp: Exp . ADDITION Exp
   42    | Exp ADDITION Exp .
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp

    MINMIN    shift, and go to state 72
    PLUSPLUS  shift, and go to state 73
    ATSIGN    shift, and go to state 74
    MULTI     shift, and go to state 81

    $default  reduce using rule 42 (Exp)


State 101

   42 Exp: Exp . ADDITION Exp
   43    | Exp . ATSIGN Exp
   44    | Exp . MINMIN Exp
   44    | Exp MINMIN Exp .
   45    | Exp . COMPAR Exp
   46    | Exp . EQUALS Exp
   47    | Exp . ORLOG Exp
   48    | Exp . ANDLOG Exp
   49    | Exp . EXOR Exp
   50    | Exp . MULTI Exp
   51    | Exp . CONCATENATE Exp
   52    | Exp . PLUSPLUS Exp ATSIGN Exp
